# crypto-gltf

./: .gitignore  README.md  packages.dot  pyproject.toml
crypto_gltf/: __init__.py
py-code/: og1.npy  og2.npy  og3.npy  pyproject.toml
py-code/py_code/: __init__.py  run_gltf.py  run_off.py
py-code/py_code/clib/: Makefile  bufferlib.c  definitions.h  main.c  printlib.c  printlib.h  utils.c  utils.h
py-code/py_code/data/: asset_file_data_types.py  base_data.py  params.py  types.py
py-code/py_code/encrypt/: aes_gcm.py  base.py  ca.py
py-code/py_code/encrypt/adaptive/: aes_gcm.py  base.py  decrypt.py  encrypt.py  key_gen.py  system.py  types.py  utils.py
py-code/py_code/encrypt/adaptive/cryptography/: aes_gcm.py  key_gen.py
py-code/py_code/encrypt/ca/: base.py  ca.py  decrypt.py  encrypt.py  hazmat.py  system.py
py-code/py_code/encrypt/deprecit/adaptive_v1/: aes_gcm.py  base.py  decrypt.py  encrypt.py  system.py  types.py  utils.py
py-code/py_code/encrypt/deprecit/adaptive_v2/: aes_gcm.py  base.py  decrypt.py  encrypt.py  key_gen.py  system.py  types.py  utils.py
py-code/py_code/encrypt/deprecit/ca/: decrypt.py  encrypt.py  system.py
py-code/py_code/io/file/: base_file.py  file.py
py-code/py_code/io/file/gltf2/: gltf2.py  utils.py
py-code/py_code/io/file/gltf2/com/: gltf2_io.py
py-code/py_code/io/file/gltf2/exp/: gltf2_exporter.py  gltf2_io_binary_data.py  gltf2_io_buffer.py
py-code/py_code/io/file/gltf2/imp/: gltf2_imp_binary_data.py  gltf2_importer.py
py-code/py_code/io/file/off/: off.py
py-code/py_code/io/plaintext/: base_plaintext.py  plnm.py
py-code/py_code/local_tests/: local_paths.py
py-code/py_code/utils/: bit_utils.py  numpy_utils.py
py-code/scripts/: delete.py
py-code/scripts/adaptive/: adaptive_v1.py  adaptive_v2.py  adaptive_v3.py  adaptive_v3_images.py  adaptive_v3_no_export.py  run_gltf.py  run_off.py
py-code/scripts/adaptive_v1/: run_gltf.py  run_off.py
py-code/scripts/adaptive_v2/: run_gltf.py
py-code/scripts/ca/: run_gltf.py  run_images.py  run_off.py
py-code/scripts/clib/: get_bits.py
py-code/tests/: conftest.py  test_asset.py  test_clib.py  test_encryptor.py  test_file.py
py-code/tests/assets/: cube_scene.glb  honda.glb  honda.gltf  rgb_over_255_problem_asset.glb  tiny_asset.glb
scripts/: run.py
tests/: conftest.py  test_asset.py  test_clib.py  test_deprecit.py  (+2 more)
(+104 files in other folders)
